# autosight

./: .gitignore  CLAUDE.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: build.yml  release.yml  test.yml
schema/: ies-fixture-list.schema.json
scripts/: pre-commit.sh  version.ts
spec/persistent/: PROJECT.md
spec/providers/: KOIZUMI.md  TOKISTAR.md
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/providers/: koizumi.rs  mod.rs  tokistar.rs
src/components/fetch/: FetchPanel.tsx
src/components/fixtures/: FixtureTable.tsx
src/components/home/: FileDropZone.tsx
src/components/layout/: MainLayout.tsx
src/components/project/: ProjectDetailPage.tsx  ProjectListPage.tsx
src/components/wizard/: WizardContainer.tsx  WizardStepper.tsx  useWizardState.ts
src/hooks/: useProjectStore.ts
src/services/excel/: parser.test.ts  parser.ts
src/services/tauri/: commands.ts
src/test/: setup.ts
src/test/mocks/: excel-data.ts
src/types/: fixture.ts  project.ts
