[package]
name = "autosight"
version = "0.1.0"
description = "AutoSight - Excel data processor with web integration"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "autosight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.1"

# Provider dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
tokio = { version = "1", features = ["sync"] }
zip = "2"
tempfile = "3"

